--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/react-infinite-scroll-component": "^5.0.0",
     "adm-zip": "^0.5.16",
     "apache-arrow": "^18.1.0",
+    "cheerio": "^1.0.0",
     "docx": "^9.0.2",
     "electron-log": "^5.1.5",
     "electron-store": "^8.2.0",
@@ -73,9 +74,12 @@
     "electron-window-state": "^5.0.3",
     "epub": "^1.3.0",
     "fs-extra": "^11.2.0",
+    "html-to-docx": "^1.8.0",
     "html2canvas": "^1.4.1",
+    "inline-css": "^4.0.3",
     "markdown-it": "^14.1.0",
     "officeparser": "^4.1.1",
+    "showdown": "^2.1.0",
     "tokenx": "^0.4.1",
     "undici": "^7.3.0",
     "webdav": "4.11.4"
@@ -100,6 +104,7 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/react-infinite-scroll-component": "^5.0.0",
+    "@types/showdown": "^2",
     "@types/tinycolor2": "^1",
     "@vitejs/plugin-react": "^4.2.1",
     "antd": "^5.22.5",
