--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CherryStudio",
+  "name": "word-box",
   "version": "1.0.1",
   "private": true,
   "description": "A powerful AI assistant for producer.",
