--- a/.github/ISSUE_TEMPLATE/#0_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/#0_bug_report.yml
@@ -18,9 +18,9 @@ body:
       options:
         - label: 我理解 Issue 是用于反馈和解决问题的，而非吐槽评论区，将尽可能提供更多信息帮助问题解决。
           required: true
-        - label: 我已经查看了置顶 Issue 并搜索了现有的 [开放Issue](https://github.com/CherryHQ/cherry-studio/issues)和[已关闭Issue](https://github.com/CherryHQ/cherry-studio/issues?q=is%3Aissue%20state%3Aclosed%20)，没有找到类似的问题。
+        - label: 我已经查看了置顶 Issue 并搜索了现有的 [开放Issue](https://github.com/CherryHQ/word-box/issues)和[已关闭Issue](https://github.com/CherryHQ/word-box/issues?q=is%3Aissue%20state%3Aclosed%20)，没有找到类似的问题。
           required: true
-        - label: 我填写了简短且清晰明确的标题，以便开发者在翻阅 Issue 列表时能快速确定大致问题。而不是“一个建议”、“卡住了”等。
+        - label: 我填写了简短且清晰明确的标题，以便开发者在翻阅 Issue 列表时能快速确定大致问题。而不是"一个建议"、"卡住了"等。
           required: true
 
   - type: dropdown
@@ -39,7 +39,7 @@ body:
     id: version
     attributes:
       label: 版本
-      description: 您正在运行的 Cherry Studio 版本是什么？
+      description: 您正在运行的 WordBox 版本是什么？
       placeholder: 例如 v1.0.0
     validations:
       required: true
