--- a/.github/ISSUE_TEMPLATE/#1_feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/#1_feature_request.yml
@@ -7,7 +7,7 @@ body:
     attributes:
       value: |
         感谢您花时间提出新的功能建议!
-        在提交此问题之前，请确保您已经了解了[项目规划](https://docs.cherry-ai.com/cherrystudio/planning)和[功能介绍](https://docs.cherry-ai.com/cherrystudio/preview)
+        在提交此问题之前，请确保您已经了解了[项目规划](https://docs.cherry-ai.com/wordbox/planning)和[功能介绍](https://docs.cherry-ai.com/wordbox/preview)
 
   - type: checkboxes
     id: checklist
@@ -18,11 +18,11 @@ body:
       options:
         - label: 我理解 Issue 是用于反馈和解决问题的，而非吐槽评论区，将尽可能提供更多信息帮助问题解决。
           required: true
-        - label: 我已经查看了置顶 Issue 并搜索了现有的 [开放Issue](https://github.com/CherryHQ/cherry-studio/issues)和[已关闭Issue](https://github.com/CherryHQ/cherry-studio/issues?q=is%3Aissue%20state%3Aclosed%20)，没有找到类似的建议。
+        - label: 我已经查看了置顶 Issue 并搜索了现有的 [开放Issue](https://github.com/CherryHQ/word-box/issues)和[已关闭Issue](https://github.com/CherryHQ/word-box/issues?q=is%3Aissue%20state%3Aclosed%20)，没有找到类似的建议。
           required: true
-        - label: 我填写了简短且清晰明确的标题，以便开发者在翻阅 Issue 列表时能快速确定大致问题。而不是“一个建议”、“卡住了”等。
+        - label: 我填写了简短且清晰明确的标题，以便开发者在翻阅 Issue 列表时能快速确定大致问题。而不是"一个建议"、"卡住了"等。
           required: true
-        - label: 最新的 Cherry Studio 版本没有实现我所提出的功能。
+        - label: 最新的 WordBox 版本没有实现我所提出的功能。
           required: true
 
   - type: dropdown
@@ -41,7 +41,7 @@ body:
     id: version
     attributes:
       label: 版本
-      description: 您正在运行的 Cherry Studio 版本是什么？
+      description: 您正在运行的 WordBox 版本是什么？
       placeholder: 例如 v1.0.0
     validations:
       required: true
