--- a/.github/ISSUE_TEMPLATE/1_feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/1_feature_request.yml
@@ -7,7 +7,7 @@ body:
     attributes:
       value: |
         Thank you for taking the time to submit a feature request!
-        Before submitting this issue, please make sure you have reviewed the [Project Roadmap](https://docs.cherry-ai.com/cherrystudio/planning) and the [Feature Overview](https://docs.cherry-ai.com/cherrystudio/preview).
+        Before submitting this issue, please make sure you have reviewed the [Project Roadmap](https://docs.cherry-ai.com/wordbox/planning) and the [Feature Overview](https://docs.cherry-ai.com/wordbox/preview).
 
   - type: checkboxes
     id: checklist
@@ -18,11 +18,11 @@ body:
       options:
         - label: I understand that issues are for reporting problems and requesting features, not for off-topic comments, and I will provide as much detail as possible to help resolve the issue.
           required: true
-        - label: I have checked the pinned issues and searched through the existing [open issues](https://github.com/CherryHQ/cherry-studio/issues), [closed issues](https://github.com/CherryHQ/cherry-studio/issues?q=is%3Aissue%20state%3Aclosed), and [discussions](https://github.com/CherryHQ/cherry-studio/discussions) and did not find a similar suggestion.
+        - label: I have checked the pinned issues and searched through the existing [open issues](https://github.com/CherryHQ/word-box/issues), [closed issues](https://github.com/CherryHQ/word-box/issues?q=is%3Aissue%20state%3Aclosed), and [discussions](https://github.com/CherryHQ/word-box/discussions) and did not find a similar suggestion.
           required: true
         - label: I have provided a short and descriptive title so that developers can quickly understand the issue when browsing the issue list, rather than vague titles like "A suggestion" or "Stuck."
           required: true
-        - label: The latest version of Cherry Studio does not include the feature I am suggesting.
+        - label: The latest version of WordBox does not include the feature I am suggesting.
           required: true
 
   - type: dropdown
@@ -41,7 +41,7 @@ body:
     id: version
     attributes:
       label: Version
-      description: What version of Cherry Studio are you running?
+      description: What version of WordBox are you running?
       placeholder: e.g. v1.0.0
     validations:
       required: true
