--- a/dev-app-update.yml
+++ b/dev-app-update.yml
@@ -1,8 +1,8 @@
 # provider: generic
 # url: http://127.0.0.1:8080
-# updaterCacheDirName: cherry-studio-updater
+# updaterCacheDirName: word-box-updater
 # provider: github
-# repo: cherry-studio
+# repo: word-box
 # owner: kangfenmao
 provider: generic
-url: https://cherrystudio.ocool.online
+url: https://wordbox.ocool.online
