--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
-appId: com.kangfenmao.CherryStudio
-productName: Cherry Studio
+appId: com.kangfenmao.WordBox
+productName: WordBox
 directories:
   buildResources: build
 files:
@@ -32,7 +32,7 @@ asarUnpack:
   - resources/**
   - '**/*.{node,dll,metal,exp,lib}'
 win:
-  executableName: Cherry Studio
+  executableName: WordBox
   artifactName: ${productName}-${version}-portable.${ext}
   target:
     - target: nsis
@@ -74,7 +74,7 @@ linux:
   category: Utility
 publish:
   provider: generic
-  url: https://cherrystudio.ocool.online
+  url: https://wordbox.ocool.online
 electronDownload:
   mirror: https://npmmirror.com/mirrors/electron/
 afterPack: scripts/after-pack.js
