--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
-appId: com.kangfenmao.CherryStudio
-productName: Cherry Studio
+appId: com.awxiaoxian2020.WordBox
+productName: WordBox
 directories:
   buildResources: build
 files:
@@ -32,7 +32,7 @@ asarUnpack:
   - resources/**
   - '**/*.{node,dll,metal,exp,lib}'
 win:
-  executableName: Cherry Studio
+  executableName: WordBox
   artifactName: ${productName}-${version}-portable.${ext}
   target:
     - target: nsis
